# music-memory

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/music_memory/: app.py  loader.py  player.py  playlist.py
