[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-memory"
version = "0.0.1"
authors = [
    { name = "Eli112358", email = "Eli112358D@gmail.com" },
]
description = "Flashcards for songs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eli112358/music-memory"
"Bug Tracker" = "https://github.com/eli112358/music-memory/issues"
